--- a/wwwroot/playground.html
+++ b/wwwroot/playground.html
@@ -7,80 +7,80 @@
  -->
    <!-- <link rel="stylesheet" href="css/budoco.css" /> -->
   
+      <script src="../lib/jquery/dist/jquery.min.js"></script>
   <!--
-    <script src="../lib/jquery/dist/jquery.min.js"></script>
-    <script src="../lib/codemirror/codemirror.js"></script>
+      <script src="../lib/codemirror/codemirror.js"></script>
     <script src="../lib/codemirror/sql.js"></script>
     <script src="../lib/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
   -->
 <style>
-
-    
-.fake_link {
-  color: green;
-  text-decoration: none;
-}
-
-fake_link:hover {
-  color: yellow;
-  text-decoration: none;
-}
-
-.my_textarea_container {
-  border: 1px solid black;
-  background-color: yellow;
-
-}
-
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  flex-wrap: wrap;
 }
-.x {
-  width: 400px;
-  margin: 4px;
+.parent {
+  position: relative;
+  margin-left: 20px;
+  background-color: lightgray;
+}
+.child{
+  flex-grow: 0;
+  margin-right: 20px;
+}
+
+#my_select{
+  position: absolute;
+  z-index: 99;
+  width: 5px;
+  display: inline-block;
+  visibility: hidden;
   background-color: yellow;
-  font-size: 12px;
+  opacity: 75%; /* so that you can see that other stuff didn't move */
 }
-
-#aa {
-  order: 4;
-  color: red;
-}
-#bb {
-  order: 1;
-}
-#cc {
-  order: 2;
-}
-
-#dd {
-  order: 3;
-}
-
-#ee {
-  order: 5;
-}
-#ff {
-  order: 6;
-}
-
 </style> 
-
 <script>
+function my_open() 
+{
+	alert("hello")
+  el = $("#my_select")
+  el.width("100px")
+  el.css("visibility", "visible")
+}
+function my_close() 
+{
+
+  el = $("#my_select")
+  el.width("5px")
+  el.css("visibility", "hidden")
+}
 </script>
 </head>
 <body>
+  <textarea>My text</textarea>
+  <br>
   <div class="container">
-    <div id="aa" class="x">&nbsp;AAAAAaaaaaaaaaaa &nbsp;</div>
-    <div id="bb" class="x">&nbsp; BBBBBBBBBBbbbbbbbbbbbbbbbbbbb &nbsp;</div>
-    <div id="cc" class="x">&nbsp; cccdddddddddddd &nbsp;</div>
-    <div id="dd" class="x">&nbsp; EEEEEEEEEEEEEEEEEEeeeeeeeee &nbsp;</div>
-    <div id="ee" class="x">&nbsp; FFFFFFFFFFFFFFFFFFFF &nbsp;</div>
-    <div id="ff" class="x">&nbsp; GGGGGGGGGG &nbsp;</div>
-
+  
+    <span class="parent">
+      <span class="child">xxaaaaaa</span>
+      <select id="my_select">
+        <option>11111111111</option>
+        <option>11111111111</option>
+        <option>11111111111</option>
+      </select>
+    </span>
+    
+    <span class="parent">
+      <span class="child">ddddd</span>
+      <span class="child">eeeeee</span>
+      <span class="child">fffff</span>
+    </span>
+  
+  
   </div>
+  <button onclick="my_open()">open</button>
+  <button onclick="my_close()">close</button>
+  <br>
+  <textarea>My text</textarea>
+  
 </body>
 </html>
